[package]
name = "rust_https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
openssl-sys = "0.9.87"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
sha1 = "0.10.5"
